manifests/overlays/prod/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: sampleapp1
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: sampleapp1
          command: ["java","-jar","/app.jar"]
          args: ["--spring.config.location=file:/config/application.yml"]
          volumeMounts:
          - mountPath: /mnt/sampleapp1
            name: "sampleapp1-volume"
            readOnly: false
            subPath: sampleapp1
          - mountPath: /config
            name: application-properties
            readOnly: true
                          
      volumes:
      - name: "sampleapp1-volume"
        persistentVolumeClaim:
          claimName: cepg-aa-std-pvc2
      - name: application-properties
        configMap:
          name: sampleapp1-configmap
          items:
            - key: application.yml
              path: application.yml
          defaultMode: 420
